# ld47

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  export_presets.cfg  project.godot
assets/: enemy_fire_bullet.wav.import  enemy_makes_damage.wav.import  enemy_takes_damage.wav.import  map.tmx  map1.ogg.import  map1.png.import  map1.wav.import  map2.ogg.import  map2.png.import  map2.tmx  map3.png.import  map4.png.import  pickup.wav.import  portal.ogg.import  portal.wav.import  ui.png.import  warp.ogg.import
assets/texture_definitions/: portal_1.tres  portal_2.tres  portal_3.tres  portal_4.tres  portal_off.tres
scenes/: Blobby.tscn  Boy.tscn  Boy_Evil.tscn  Bullet.gd  Bullet.tscn  BulletSpawner.tscn  CatBoss.tscn  CatSpawner.gd  CatSpawner.tscn  Chest.tscn  Game.tscn  Gandolf.tscn  Gate.tscn  Ghost.tscn  Kitten.tscn  Map.tscn  Map_1.tscn  Map_2.tscn  Map_3.tscn  Map_4.tscn  Player.tscn  Portal.gd  Portal.tscn  Slime.tscn  SmallBullet.tscn  UI.tscn
scripts/: Blobby.gd  Boy.gd  Boy_Evil.gd  Bullet.gd  BulletSpawner.gd  CatBoss.gd  Chest.gd  Gandolf.gd  Gate.gd  Ghost.gd  Kitten.gd  Player.gd  Portal.gd  SwordArea.gd  UI.gd
shaders/: Damage.shader
src/: CMakeLists.txt  Context.cpp  Context.h  Ecs.cpp  Ecs.h  EntityFactory.cpp  EntityFactory.h  MapLoader.cpp  MapLoader.h  main.cpp
src/components/: AnimatedSprite.h  Attacking.h  Collidable.h  Collision.h  DynamicCollidable.h  Facing.h  Map.h  MapChangeTrigger.h  MapLoadRequest.h  Player.h  PlayerInput.h  Position.h  Size.h  Sprite.h  TileLayer.h  Velocity.h
src/graphics/: AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animation.h  AnimationCollection.h
src/systems/: AnimationSystem.cpp  AnimationSystem.h  CameraSystem.cpp  CameraSystem.h  CollisionSolverSystem.cpp  CollisionSolverSystem.h  CollisionSystem.cpp  CollisionSystem.h  EventSystem.cpp  EventSystem.h  InputSystem.cpp  InputSystem.h  MapChangeSystem.cpp  MapChangeSystem.h  MovementSystem.cpp  MovementSystem.h  PlayerAnimationSystem.cpp  PlayerAnimationSystem.h  SpriteSystem.cpp  SpriteSystem.h  TileLayerRenderingSystem.cpp  TileLayerRenderingSystem.h
